03.12.2019
    - Eliminated all but one tr("Empty") string usage in plugins/pipeline/rack. (Tim)
30.11.2019
    - Added a specialization of QMdiArea to work around problems with PgUp and PgDown
      shortcuts as it was found through Snooper tool that this is the widget that
      was stealing the keypresses.
    - Another keypress fix in pcanvas.cpp to allow Return to be captured
    - Fixed a crash in drumlist when using a drummap and opening without the port having 
      been properly initialized (in this case the synth plugin was missing). The 
      dm->port had an extreme value, now the range is checked. (rj)
    - Fix #697: On HiDPI displays, plugin native UI windows are automatically
      scaled by Qt, but most of the native plugin UIs are not scalable 
      or apply their own scaling. There is now a global setting for reverting 
      the Qt window scaling. It can be overridden for each soft synth track
      by a local setting in the Quirks toolbar. (kybos)
    - Fix # 708: Surge-vst crashes. It called our pluginHostCallback() immediately from
       instantiate() before we stored the pointer. Added VstNativeSynth::openPlugin() (Tim)
28.11.2019
    - Fixed the DidYouKnow menu alternative so it shows the dialog even if the
      checkbox for not displaying it is checked. (rj)
    - Added a few more lines to the DidYouKnow.txt database
    - Snooper improvements, fix crashes, fix 'parented top level' not working right. (Tim)
27.11.2019
    - Unfortunately had to revoke the 'easy fix' below for getting more shortcuts to work
      there were side effects...  The search goes on for the 'real' solution (rj)
    - Snooper improvements. Moved to Help menu. Live realtime monitoring of events. (Tim)
26.11.2019
    * New - Introducing the Snooper (object tree) for coders and stylesheet authors: (Tim)
      Click new Snooper button in Appearance to start. Then click on anything anywhere.
23.11.2019
    - More keyboard shortcuts