@@ -1,5 +1,6 @@
 03.12.2019
     - Eliminated all but one tr("Empty") string usage in plugins/pipeline/rack. (Tim)
+    - Snooper: Provide flashColor property. Changed it in Ardour and Dark qss themes.
 30.11.2019
     - Added a specialization of QMdiArea to work around problems with PgUp and PgDown
       shortcuts as it was found through Snooper tool that this is the widget that
